# Akasha

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  justfile
.github/workflows/: build_and_deploy.yaml
admin/: build.ts  components.json  package.json
admin/src/: App.tsx  frontend.tsx
admin/src/components/: app-sidebar.tsx  birth-date-picker.tsx  game-select.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  site-header.tsx
admin/src/pages/: auth.tsx  characters.tsx  dashboard.tsx  games.tsx  news.tsx  overview.tsx
assets/games/bh3/: cover.avif
assets/games/hna/: cover.avif  icon.avif
assets/games/planet/: cover.avif
assets/games/sr/: cover.avif
assets/games/wd/: cover.avif
assets/games/ys/: cover.avif
assets/games/zzz/: cover.avif
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: characters.rs  games.rs  mcp.rs  mod.rs  root.rs  scalar.rs  time.rs
backend/src/routes/admin/: admin_token.rs  middleware.rs  mod.rs  setup_token.rs
backend/src/routes/admin/auth/: login.rs  logout.rs  me.rs  mod.rs  refresh.rs  setup.rs  setup_status.rs
backend/src/routes/admin/data/: characters.rs  mod.rs  news.rs
backend/src/routes/news/: categories.rs  items.rs  meta.rs  mod.rs  rss.rs  search.rs  sources.rs
backend/src/routes/system/: mod.rs  status.rs  time.rs
crates/axum-mcp/: Cargo.toml
crates/axum-mcp-macros/: Cargo.toml
crates/axum-mcp-macros/src/: lib.rs
crates/axum-mcp/src/: lib.rs  response.rs  sse.rs  streamable_http.rs
crates/backend/: Cargo.toml
crates/backend/src/: api.rs  app.rs  config.rs  features.rs  http.rs  lib.rs  main.rs  site.rs  state.rs
crates/backend/src/api/: admin.rs  auth.rs  docs.rs  healthz.rs  v1.rs
crates/backend/src/features/: auth.rs  calendar.rs  characters.rs  events.rs  games.rs  news.rs  workers.rs
crates/backend/src/features/auth/: dto.rs  endpoints.rs  github.rs  query.rs  token.rs
crates/backend/src/features/calendar/: endpoints.rs
crates/backend/src/features/characters/: admin.rs  dto.rs  endpoints.rs  query.rs  use_cases.rs
crates/backend/src/features/events/: endpoints.rs
crates/backend/src/features/games/: dto.rs  endpoints.rs  use_cases.rs
crates/backend/src/features/news/: admin.rs  dto.rs  endpoints.rs  query.rs  rss.rs  use_cases.rs
crates/backend/src/features/workers/: dto.rs  endpoints.rs  use_cases.rs
crates/backend/src/http/: error.rs  extractors.rs  middleware.rs  path.rs  response.rs
crates/crawler-core/: Cargo.toml
crates/crawler-core/src/: game.rs  http.rs  lib.rs
crates/crawler-demo/: Cargo.toml
crates/crawler-demo/src/: game.rs  lib.rs
crates/crawler-miyoushe-news/: Cargo.toml
crates/crawler-miyoushe-news/src/: game.rs  http.rs  lib.rs
crates/crawler-official-site-news/: Cargo.toml
crates/crawler-official-site-news/src/: game.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  entities.rs  error.rs  lib.rs  models.rs  repositories.rs  seed.rs
crates/db/src/entities/: admin_sessions.rs  admin_users.rs  audit_logs.rs  characters.rs  game_characters.rs  game_events.rs  games.rs  meta.rs  mod.rs  news.rs  news_categories.rs  news_categories_link.rs  news_items.rs  news_search.rs  news_sources.rs  news_tags.rs  news_tags_link.rs  oauth_accounts.rs  tags.rs  user_api_keys.rs  user_groups.rs  user_refresh_tokens.rs  users.rs  worker_states.rs
crates/db/src/enums/: gender.rs  mod.rs
crates/db/src/repositories/: auth.rs  characters.rs  games.rs  news.rs  news_tags.rs  workers.rs
crates/db/src/repositories/auth/: commands.rs  projections.rs  queries.rs
crates/db/src/repositories/characters/: commands.rs  projections.rs  queries.rs
crates/db/src/repositories/games/: projections.rs  queries.rs
crates/db/src/repositories/news/: commands.rs  projections.rs  queries.rs
crates/db/src/repositories/news_tags/: commands.rs  projections.rs  queries.rs
crates/db/src/repositories/workers/: commands.rs  projections.rs
crawler/: Cargo.toml
crawler/src/: game.rs  main.rs  scheduler.rs  task_registry.rs  tasks.rs
frontend/admin/: build.ts  bun-env.d.ts  bunfig.toml
frontend/admin/src/: index.html  index.ts
frontend/admin/src/components/: basic-date-picker.tsx  game-select.tsx  login-form.tsx  signup-form.tsx  site-header.tsx
frontend/admin/src/pages/: admin-list-page.tsx  auth.tsx  dashboard.tsx  protected-route.tsx
frontend/wiki/: package.json
frontend/wiki/src/: frontend.tsx  index.html  index.ts
frontend/wiki/src/components/: game-card.tsx  language-switcher.tsx  markdown-content.tsx  theme-toggle.tsx
frontend/wiki/src/data/: cache.ts  game-modules.ts  game-overviews.ts  games.ts  languages.ts
frontend/wiki/src/layouts/: base-layout.tsx  game-layout.tsx  page-toc.tsx
frontend/wiki/src/layouts/game/: game-module-nav.tsx  game-page-toc.tsx
frontend/wiki/src/lib/: icon-resolver.ts  language.tsx  theme.tsx
frontend/wiki/src/pages/: game-overview.tsx  game-section.tsx  home.tsx
frontend/wiki/src/routes/: app-routes.tsx
scripts/linux/: build-package.sh  db-up.sh  load-env.sh  run-worker.sh  start-dev.sh
scripts/windows/: build-package.ps1  db-up.ps1  load-env.ps1  run-worker.ps1  start-dev.ps1
worker/: build.ts  package.json  run.sh
worker/src/character/: backend.ts  index.ts  types.ts
worker/src/character/workers/: sr.ts  ys.ts  zzz.ts
worker/src/event/: index.ts  types.ts
worker/src/news/: backend.ts  index.ts  tags.ts  types.ts
worker/src/news/mys/: content.ts  request.ts  tags.ts  types.ts  worker.ts
worker/src/news/mys/workers/: bh3.ts  hna.ts  planet.ts  sr.ts  wd.ts  ys.ts  zzz.ts
worker/src/news/web_cn/: content.ts  types.ts  worker.ts
worker/src/news/web_cn/parsers/: ys.test.ts  ys.ts
worker/src/news/web_cn/workers/: planet.ts  sr.ts  ys.ts  zzz.ts
worker/src/shared/: backend.ts  config.ts  delay.ts  http.ts  logger.ts  runner.ts  types.ts  url.ts  worker-state.ts
