[workspace]
resolver = "2"
members = [
    "backend",
    "crates/axum-mcp",
    "crates/axum-mcp-macros",
    "crates/crawler-core", "crates/crawler-demo",
    "crates/crawler-miyoushe-news",
    "crates/crawler-official-site-news",
    "crates/db",
    "crawler"]
default-members = ["backend"]

[workspace.package]
version = "0.1.0"
authors = ["Trrrrw <wzhhenry@qq.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
