[workspace]
resolver = "2"
members = [
    "crates/backend",
    "crates/db",
]
default-members = ["crates/backend"]

[workspace.package]
version = "0.1.0"
authors = ["Trrrrw <wzhhenry@qq.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

# [profile.release]
# lto = true
# codegen-units = 1
# strip = true
# panic = "abort"
