[package]
name = "Akasha"
description = "米哈游游戏信息聚合 API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-mcp = { path = "../crates/axum-mcp" }
chrono = "0.4.44"
db = { path = "../crates/db" }
rss = "2"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.37.2"
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
