[package]
name = "crawler"
description = "Scheduled data crawler for Akasha."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.5.51", features = ["derive"] }
db = { path = "../crates/db" }
reqwest = { version = "0.13.3", features = ["json", "query"] }
scraper = "0.26.0"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { workspace = true }
tokio-cron-scheduler = "0.15.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

crawler-core = { path = "../crates/crawler-core" }
crawler-official-site-news = { path = "../crates/crawler-official-site-news" }
crawler-miyoushe-news = { path = "../crates/crawler-miyoushe-news" }
comfy-table = "7.2.2"
