[package]
name = "axum-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-mcp-macros = { path = "../axum-mcp-macros" }
chrono = "0.4.44"
inventory = "0.3.24"
serde = { workspace = true }
serde_json = { workspace = true }
