[package]
name = "crawler-miyoushe-news"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.44"
crawler-core = { path = "../crawler-core" }
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
