[package]
name = "crawler-official-site-news"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.44"
crawler-core = { path = "../crawler-core" }
scraper = "0.26.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.15.1"
